# stm32_uart_rb

./: CMakeLists.txt  README.md
examples/f4/nucleo_f411re/simple/: .mxproject  CMakeLists.txt  simple.ioc
examples/f4/nucleo_f411re/simple/Core/Inc/: stm32f4xx_hal_conf.h
examples/f4/nucleo_f411re/simple/Core/Src/: main.c  usart.c
examples/f4/nucleo_f411re/simple/cmake/stm32cubemx/: CMakeLists.txt
uart_rb/: CMakeLists.txt
uart_rb/inc/: uart_rb.h
uart_rb/src/: uart_rb.c
